--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -34,17 +34,49 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
+        android:id="@+id/emailEditText"
         android:layout_width="305"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
         android:layout_marginTop="143dp"
         android:layout_marginEnd="35dp"
+        android:backgroundTint="@color/purple_200"
+        android:hint="Email"
+        android:minHeight="48dp"
+        android:textColorHint="#FFFFFF"
+        app:hintTextAppearance="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        android:hint="Email"
-        android:textColorHint="#FFFFFF"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <EditText
+        android:id="@+id/passEditText"
+        android:layout_width="305"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="35dp"
         android:backgroundTint="@color/purple_200"
-        app:hintTextAppearance="18sp" />
+        android:hint="Пароль"
+        android:inputType = "textPassword"
+        android:minHeight="48dp"
+        android:textColorHint="#FFFFFF"
+        app:hintTextAppearance="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
+
+    <Button
+        android:layout_width="321dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="55dp"
+        android:layout_marginEnd="27dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/passEditText"
+        android:backgroundTint = "#7C9A92"
+        android:text = "Sign In"
+        android:onClick = "signIn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
